1. Collection API Улучшения [#188143]