@@ -9,10 +9,8 @@ import static org.hamcrest.core.Is.*;
 public class ConvertListTest {
     @Test
     public void whenConvert2mas() {
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1});
-        list.add(new int[]{2, 3});
-        List<Integer> exp = Arrays.asList(1, 2, 3);
+        List<int[]> list = List.of(new int[]{1}, new int[]{2, 3});
+        List<Integer> exp = List.of(1, 2, 3);
         assertThat(ConvertList.convert(list), is(exp));
     }
 }
